# pose_control_drone

./: CMakeLists.txt  package.xml
launch/: camera.launch.py  controller_select.launch.py  gazebo_drone_box.launch.py
src/: body_rate_select_node.cpp  controller_node.cpp  marker_detector_node.cpp  mavlink_injector_node.cpp  teleop_node.cpp  vision_body_rate_controller.cpp
